--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "acdc",
   "version": "0.1.0",
   "private": true,
+  "main": "src/elements/index.tsx",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -46,7 +47,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not ie"
     ],
     "development": [
       "last 1 chrome version",
