cards and state and previews oh my

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "acdc",
-  "name": "andculture Design Challenge",
+  "name": "andculture Development Challenge",
   "icons": [
     {
       "src": "favicon.ico",
