--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "0.11.0",
     "sass-loader": "^12.1.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
